Align chat endpoints with "distinguished key" changes in key transparency service